[gd_scene load_steps=7 format=3 uid="uid://byhtic5yli25m"]

[ext_resource type="Script" path="res://Scripts/UI/CompanyStockButtonUI.gd" id="1_o4wnn"]
[ext_resource type="Texture2D" uid="uid://e50pyseobfoy" path="res://Art/TrendDown.png" id="1_pgvgw"]
[ext_resource type="Texture2D" uid="uid://ds1xl2kl87grm" path="res://Art/StockIncrementor.png" id="2_0f4rt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dumrr"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 1
border_color = Color(0, 0.878431, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pu4qw"]
bg_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_usj8i"]
bg_color = Color(0, 0.878431, 0, 1)

[node name="CompanyStockUI" type="Button"]
custom_minimum_size = Vector2(275, 10)
theme_override_styles/normal = SubResource("StyleBoxFlat_dumrr")
theme_override_styles/hover = SubResource("StyleBoxFlat_pu4qw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dumrr")
script = ExtResource("1_o4wnn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(299, 9)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -7.0
offset_right = 162.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TrendIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_pgvgw")
stretch_mode = 5

[node name="Divider" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="StockChangePercent" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "-21.65%"
horizontal_alignment = 2

[node name="Divider2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="CompanyName" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Microserfs"

[node name="Divider3" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="StockPrice" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "$5"

[node name="Divider4" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="X" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "X"
horizontal_alignment = 1

[node name="Divider5" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="StockAmount" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "2"
horizontal_alignment = 2

[node name="Divider6" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="StockIncrementor" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0f4rt")
stretch_mode = 5

[node name="Divider7" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="Equals" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "="
horizontal_alignment = 1

[node name="Divider8" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(1, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_usj8i")

[node name="Equals2" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "$"
horizontal_alignment = 1

[node name="MoneyGained" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0.878431, 0, 1)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "3200"
horizontal_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
